3.10.6/_sources/plot_types/stats/eventplot.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "plot_types/stats/eventplot.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_plot_types_stats_eventplot.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_plot_types_stats_eventplot.py:


============
eventplot(D)
============
Plot identical parallel lines at the given positions.

See `~matplotlib.axes.Axes.eventplot`.

.. GENERATED FROM PYTHON SOURCE LINES 9-28



.. image-sg:: /plot_types/stats/images/sphx_glr_eventplot_001.png
   :alt: eventplot
   :srcset: /plot_types/stats/images/sphx_glr_eventplot_001.png, /plot_types/stats/images/sphx_glr_eventplot_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. code-block:: Python

    import matplotlib.pyplot as plt
    import numpy as np

    plt.style.use('_mpl-gallery')

    # make data:
    np.random.seed(1)
    x = [2, 4, 6]
    D = np.random.gamma(4, size=(3, 50))

    # plot:
    fig, ax = plt.subplots()

    ax.eventplot(D, orientation="vertical", lineoffsets=x, linewidth=0.75)

    ax.set(xlim=(0, 8), xticks=np.arange(1, 8),
           ylim=(0, 8), yticks=np.arange(1, 8))

    plt.show()


.. _sphx_glr_download_plot_types_stats_eventplot.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: eventplot.ipynb <eventplot.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: eventplot.py <eventplot.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: eventplot.zip <eventplot.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
